Add repo and directory usage view
